*res* tint to look like LED
-------------------------------------------
commit https://bitbucket.org/revo_lucas/call-of-chernobyl/commits/5fcf01b062c981dd9644fa24beb6abe71c8b1c04?at=main

--- a/res/gamedata_COC/configs/items/items_devices.ltx
+++ b/res/gamedata_COC/configs/items/items_devices.ltx
@@ -218,6 +218,7 @@ item_position                            = -0.065,0.033,0.01
 item_orientation                         = 198,-198,-230
 item_visual                              = dynamics\devices\dev_flashlight\dev_flashlight_hud
 fire_point                               = 0,0,0
+fire_direction							 = 0.17,-0.72,1
 fire_bone                                = light_bone_2
 fire_point2                              = 0,0,0
 fire_bone2                               = light_bone_1
@@ -241,12 +242,12 @@ type                                     = 2 ; type  0-Direct 1-Point 2-Spot 3-O
 range                                    = 25 ; range                 <in meters>
 range_r2                                 = 25 ; range                 <in meters>
 color                                    = 0.8,0.7,0.7,0.2 ; four color components <r,g,b,a> 0.f<X<3.f
-color_r2                                 = 1.0,0.9,0.9,0.9 ; four color components <r,g,b,a> 0.f<X<3.f
+color_r2                                 = 1.0,0.9,1.1,0.9 ; four color components <r,g,b,a> 0.f<X<3.f
 color_animator                           = empty ; color animator name   (empty - not using animator) //light_torch_01
-volumetric                               = false
-volumetric_quality                       = 1
-volumetric_intensity                     = 1
-volumetric_distance                      = 1
+volumetric                               = true
+volumetric_quality                       = 0.5
+volumetric_intensity                     = 0.10
+volumetric_distance                      = 0.25
 
 omni_type                                = 1 ; type  0-Direct 1-Point 2-Spot 3-OMNIPART 4-Reflected
 omni_range                               = 1.5 ; range                 <in meters>
@@ -259,4 +260,4 @@ spot_angle                               = 60 ; spot angle            <in gradus
 
 glow_texture                             = glow\glow_torch_r2 ; glow texture name     (required)
 glow_radius                              = 0.2 ; glow radius           <in meters>
-guide_bone                               = lid ; guid bone name        (required)
+guide_bone                               = wpn_body ; guid bone name        (required)
