*res* update for new method
------------------------------------------------
commit https://bitbucket.org/revo_lucas/call-of-chernobyl/commits/46068f08e0ff0ff19f5608c494d69baceef8ebf7?at=main

--- a/res/gamedata_COC/configs/misc/postprocess.ltx
+++ b/res/gamedata_COC/configs/misc/postprocess.ltx
@@ -319,3 +319,8 @@ pp_eff_overlap 	= false
 
 cam_eff_name	= camera_effects\radar_stop.anm
 cam_eff_cyclic	= 0
+
+
+[effector_psy_health]	;Remove this section to disable this effector
+pp_eff_name		= snd_shock.ppe
+pp_eff_cyclic	= 0
