*res* heli snd_explode fix
---------------------------------------------
commit https://bitbucket.org/revo_lucas/call-of-chernobyl/commits/c18f5fc085bcb63c50afff0fbbcb9ed6c18bc2cb?at=main

--- a/res/gamedata_COC/configs/creatures/helicopter.ltx
+++ b/res/gamedata_COC/configs/creatures/helicopter.ltx
@@ -89,7 +89,7 @@ light_color_animmator				= koster_00
 
 smoke_particle						= damage_fx\heli_burn			;партиклы при ранении
 explode_particle					= explosions\expl_mushroom_01	;партиклы при взрыве
-explode_sound						= weapons\heli_explosion		;звук собственного взрыва
+snd_explode							= weapons\heli_explosion		;звук собственного взрыва
 
 ;------------------------------все для пулемета
 snd_shoot_rocket					= weapons\heli_rocket_shoot		;звук выстрела ракетой   
