*res* rspec corrections
-----------------------------------------------
commit https://bitbucket.org/revo_lucas/call-of-chernobyl/commits/bbe2cca7b74d0ebc328341c649b3bcc7a9cadc92?at=main

--- a/res/gamedata_COC/configs/rspec_high.ltx
+++ b/res/gamedata_COC/configs/rspec_high.ltx
@@ -3,6 +3,8 @@ ph_iterations 18
 r1_detail_textures on
 r1_dlights_clip 60
 r1_glows_per_frame 16
+r1_ssa_lod_a 64.
+r1_ssa_lod_b 48.
 r2_detail_bump on
 r2_dof -0.400000,1.400000,500.000000
 r2_dof_enable on
@@ -12,12 +14,14 @@ r2_dof_sky 0
 r2_exp_donttest_shad off
 r2_gi off
 r2_ls_bloom_fast off
-r2_ls_bloom_threshold 1.
 r2_ls_bloom_kernel_scale 0.5
+r2_ls_bloom_threshold 1.
 r2_ls_squality 1.0
 r2_slight_fade 0.75
 r2_soft_particles on
 r2_soft_water on
+r2_ssa_lod_a 64.
+r2_ssa_lod_b 48.
 r2_ssao st_opt_off
 r2_steep_parallax on
 r2_sun on
@@ -25,6 +29,7 @@ r2_sun_depth_far_bias -0.00002
 r2_sun_depth_far_scale 1
 r2_sun_depth_near_bias 0.00007
 r2_sun_depth_near_scale 1
+r2_sun_details off
 r2_sun_far 180
 r2_sun_focus on
 r2_sun_lumscale 2
@@ -37,6 +42,7 @@ r2_sun_shafts st_opt_medium
 r2_sun_tsm on
 r2_sun_tsm_bias -0.01
 r2_sun_tsm_proj 0.3
+r2_sunshafts_mode volumetric
 r2_tf_mipbias 0
 r2_tonemap on
 r2_tonemap_adaptation 2.0
