--- a/res/gamedata_COC/configs/rspec_minimum.ltx
+++ b/res/gamedata_COC/configs/rspec_minimum.ltx
@@ -3,6 +3,8 @@ ph_iterations 18
 r1_detail_textures off
 r1_dlights_clip 30
 r1_glows_per_frame 16
+r1_ssa_lod_a 64.
+r1_ssa_lod_b 48.
 r2_detail_bump off
 r2_dof -0.400000,1.400000,500.000000
 r2_dof_enable off
@@ -18,6 +20,8 @@ r2_ls_squality 0.5
 r2_slight_fade 0.5
 r2_soft_particles off
 r2_soft_water off
+r2_ssa_lod_a 64.
+r2_ssa_lod_b 48.
 r2_ssao st_opt_off
 r2_ssao_mode disabled
 r2_steep_parallax off
@@ -26,6 +30,7 @@ r2_sun_depth_far_bias -0.00002
 r2_sun_depth_far_scale 1
 r2_sun_depth_near_bias 0.00007
 r2_sun_depth_near_scale 1
+r2_sun_details off
 r2_sun_far 180
 r2_sun_focus on
 r2_sun_lumscale 2
@@ -38,6 +43,7 @@ r2_sun_shafts st_opt_off
 r2_sun_tsm on
 r2_sun_tsm_bias -0.01
 r2_sun_tsm_proj 0.3
+r2_sunshafts_mode screen_space
 r2_tf_mipbias 0
 r2_tonemap on
 r2_tonemap_adaptation 2.0
