--- a/res/gamedata_COC/configs/rspec_default.ltx
+++ b/res/gamedata_COC/configs/rspec_default.ltx
@@ -4,6 +4,8 @@ ph_iterations 18
 r1_detail_textures on
 r1_dlights_clip 50
 r1_glows_per_frame 16
+r1_ssa_lod_a 64.
+r1_ssa_lod_b 48.
 r2_detail_bump on
 r2_dof -0.400000,1.400000,500.000000
 r2_dof_enable off
@@ -21,6 +23,8 @@ r2_ls_squality 0.8
 r2_slight_fade 0.5
 r2_soft_particles on
 r2_soft_water on
+r2_ssa_lod_a 64.
+r2_ssa_lod_b 48.
 r2_ssao st_opt_off
 r2_ssao_mode disabled
 r2_steep_parallax on
@@ -29,6 +33,7 @@ r2_sun_depth_far_bias -0.00002
 r2_sun_depth_far_scale 1
 r2_sun_depth_near_bias 0.00007
 r2_sun_depth_near_scale 1
+r2_sun_details off
 r2_sun_far 180
 r2_sun_focus on
 r2_sun_lumscale 2
