*res* New dialogs by Taffy
--------------------------------------------------
commit https://bitbucket.org/revo_lucas/call-of-chernobyl/commits/edeb36a29660b592b4da2411a965f0d4e6b6cecc?at=main

--- a/res/gamedata_COC/configs/misc/dialog_manager.ltx
+++ b/res/gamedata_COC/configs/misc/dialog_manager.ltx
@@ -54,6 +54,16 @@ category = job
 npc_community = csky
 level = k00_marsh
 
+[dm_job_11]
+category = job
+npc_community = killer
+level = all
+
+[dm_job_12]
+category = job
+npc_community = killer
+level = all
+
 ; ANOMALIES
 [dm_anomalies_0]
 category = anomalies
@@ -661,6 +671,31 @@ category = information
 npc_community = all
 level = all
 
+[dm_information_63]
+category = information
+npc_community = killer
+level = all
+
+[dm_information_64]
+category = information
+npc_community = killer
+level = l09_deadcity
+
+[dm_information_65]
+category = information
+npc_community = stalker
+level = k00_marsh, l01_escape, k01_darkscape, l03_agroprom, l05_bar
+
+[dm_information_66]
+category = information
+npc_community = all
+level = all
+
+[dm_information_67]
+category = information
+npc_community = csky, ecolog
+level = all
+
 ;Wounded dialogs
 [dm_help_1]
 category = hello
@@ -759,6 +794,12 @@ level = all
 wounded = true
 
 [dm_help_17]
+category = hello
+npc_community = all
+level = all
+wounded = true
+
+[dm_help_18]
 category = hello
 npc_community = all
 level = all
