Фикс вылета при выкидывании фонаря

--- a/res/gamedata_COC/configs/items/items_devices.ltx
+++ b/res/gamedata_COC/configs/items/items_devices.ltx
@@ -187,6 +187,7 @@ slot                                     = 8
 animation_slot                           = 7
 default_to_ruck                          = false
 cost                                     = 2000
+cform                                    = skeleton
 inv_weight                               = 0.2
 inv_grid_width                           = 1
 inv_grid_height                          = 1
