*res* немного обновления.

--- a/res/gamedata_COC/configs/atmosfear_options.ltx
+++ b/res/gamedata_COC/configs/atmosfear_options.ltx
@@ -5,11 +5,15 @@
         opt_blowout_warning              = radio_siren
         opt_enable_blowout               = 1
         opt_enable_psi_storm             = 1
+        opt_fake_start_period_bad        = rainy
+        opt_fake_start_period_bad_length = 6
+        opt_fake_start_period_good       = clear_foggy
+        opt_fake_start_period_good_length = 6
         opt_god_mode                     = false
-        opt_jupiter_period_bad           = clear_foggy
-        opt_jupiter_period_bad_length    = 8
-        opt_jupiter_period_good          = rainy
-        opt_jupiter_period_good_length   = 4
+        opt_jupiter_period_bad           = clear
+        opt_jupiter_period_bad_length    = 5
+        opt_jupiter_period_good          = clear_foggy
+        opt_jupiter_period_good_length   = 6
         opt_k00_marsh_period_bad         = stormy
         opt_k00_marsh_period_bad_length  = 6
         opt_k00_marsh_period_good        = clear_foggy
@@ -100,8 +104,8 @@
         opt_psi_storm_freq               = 24
         opt_psi_storm_task               = give
         opt_psi_storm_warning            = siren
-        opt_weather_balance_presets      = balance_default
-        opt_weather_length_presets       = length_default
+        opt_weather_balance_presets      = balance_custom
+        opt_weather_length_presets       = balance_custom
         opt_zaton_period_bad             = clear_foggy
         opt_zaton_period_bad_length      = 8
         opt_zaton_period_good            = rainy
