--- a/res/gamedata_COC/configs/axr_options.ltx
+++ b/res/gamedata_COC/configs/axr_options.ltx
@@ -1,12 +1,17 @@
 [character_creation]
         new_game_azazel_mode             =
-        new_game_character_icon          =
-        new_game_character_name          =
-        new_game_faction                 =
-        new_game_faction_position        =
+        new_game_campfire_mode           =
+        new_game_character_icon          = ui_inGame2_duty_bala
+        new_game_character_name          = Romann
+        new_game_economy_goodwill        = 1.25
+        new_game_economy_loot            = 1.2
+        new_game_economy_money           = 1.25
+        new_game_economy_wpn             = 1.1
+        new_game_faction                 = dolg
+        new_game_faction_position        = makeshift_barracks
         new_game_hardcore_mode           =
-        new_game_loadout                 =
-        new_game_story_mode              =
+        new_game_loadout                 = money=700, device_torch=1, energy_drink=1, bandage=1, wpn_binoc=1, wpn_knife=1, ammo_9x18_fmj=3, dolg_novice_outfit=1, vodka=1, wpn_pm=1, kolbasa=2, medkit=1,
+        new_game_story_mode              = true
         new_game_survival_mode           =
  
 [closecaption]
@@ -25,12 +30,13 @@
  
 [mm_options]
         alife_mutant_pop                 = 1
-        alife_stalker_pop                = 1
-        char_portrait                    = ui_inGame2_duty_2_old
+        alife_stalker_pop                = 0.5
+        char_portrait                    =
         enable_art_degrade               = false
         enable_debug_hud                 = false
         enable_debug_map_hud             = false
         enable_dynamic_news              = true
+        enable_enhanced_recoil           = false
         enable_hardcore_ai_aim           = false
         enable_heli_engine_sound         = true
         enable_heli_spawn                = true
@@ -42,7 +48,12 @@
         enable_show_enemy_health         = true
         enable_sleep_deprived            = false
         enable_slot_hud                  = false
-        excl_dist                        = 25
-        localization                     = rus
+        enable_weapon_hide               = true
+        excl_dist                        = 50
+        localization                     =
+        multi_loot                       = 1
+        multi_rewards_goodwill           = 1
+        multi_rewards_money              = 1
+        multi_wpn_conditions             = 1
         quicksave_cnt                    = 10
  
