--- a/res/gamedata_COC/configs/localization.ltx
+++ b/res/gamedata_COC/configs/localization.ltx
@@ -1,7 +1,8 @@
+[languages]
+        eng                              =
+        rus                              =
+ 
 [string_table]
         font_prefix                      =
         language                         = rus
  
-[Languages]
-eng
-rus
