--- a/res/gamedata_COC/configs/misc/postprocess.ltx
+++ b/res/gamedata_COC/configs/misc/postprocess.ltx
@@ -320,7 +320,10 @@ pp_eff_overlap 	= false
 cam_eff_name	= camera_effects\radar_stop.anm
 cam_eff_cyclic	= 0
 
+pp_eff_overlap 	= false
 
 [effector_psy_health]	;Remove this section to disable this effector
 pp_eff_name		= snd_shock.ppe
 pp_eff_cyclic	= 0
+
+pp_eff_overlap	= true
