*res* Забыл добавить в конфиги "Friend_Community_Overrides".

--- a/res/gamedata_COC/configs/creatures/m_cat.ltx
+++ b/res/gamedata_COC/configs/creatures/m_cat.ltx
@@ -15,6 +15,8 @@ visual				= monsters\cat\cat
 corpse_visual		= monsters\cat\cat
 icon = ui_npc_monster_cat	
 
+Friend_Community_Overrides	= actor_zombied
+
 hit_fraction_monster = 0.5
 skin_armor = 0.1
 
