--- a/res/gamedata_COC/configs/creatures/m_dog.ltx
+++ b/res/gamedata_COC/configs/creatures/m_dog.ltx
@@ -16,6 +16,8 @@ visual				 = monsters\dog\dog
 corpse_visual		 = monsters\dog\dog_dead
 icon				 = ui_npc_monster_dog
 
+Friend_Community_Overrides	= actor_zombied
+
 smart_terrain_choose_interval	= 00:15:00
 
 spawn_phantom 		= m_phantom_dog
