--- a/res/fsgame.ltx
+++ b/res/fsgame.ltx
@@ -4,7 +4,7 @@ $arch_dir$              = false| false| $fs_root$
 $game_arch_mp$          = false| false| $fs_root$|            mp\
 $arch_dir_levels$       = false| false| $fs_root$|            levels\
 $arch_dir_resources$    = false| false| $fs_root$|            resources\
-$arch_dir_localization$ = false| false| $fs_root$|            localization\
+$arch_dir_localization$ = false| false| $fs_root$|            Localization\
 $arch_dir_patches$      = false| true|  $fs_root$|            patches\
 $game_data$             = false| true|  $fs_root$|            gamedata\
 $game_ai$               = true|  false| $game_data$|          ai\
