Introduced compatibility modes for COP, CS and SOC (#382, #392)
You can disable it to unlock some features

--- a/res/gamedata/configs/openxray.ltx
+++ b/res/gamedata/configs/openxray.ltx
@@ -21,3 +21,9 @@ actor_death_camera = freelook
 ; undefined behavior, random crashes
 ; and saves corruption
 allow_nil_conversion = false
+
+[compatibility]
+; Compatibility with previous games
+; cop, cs, shoc or soc and unlock
+; unlock is cop with disabled restrictions
+game_mode = cop
